--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
     </head>
     <body>
         <div id="app"></div>
+        <footer>
+            <address class="text-center">
+                <span>created by <em>MayMyaMyaCin</em>.</span><br/>
+                <span>For freeCodeCamp's frontend project</span><br/>
+                <span><i class="fa-solid fa-envelope"></i> <a>maymyamyacin@gmail.com</a></span>
+            </address>
+        </footer>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <script type="text/babel" src="app.js"></script>
     </body>
